# vogelring-analytics

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
app/: app.py  data.py  db.py  filter.py  view.py
app/util/: col_mapping.py  datasets.py  dates.py  places.py  plotting.py  storage.py
app/views/: __init__.py  data_sets.py  data_view.py  map_usecase.py  moult_usecase.py  places_usecase.py
