[project]
name = "vogelring-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.49.1",
    "pandas>=2.3.2",
    "altair>=5.5.0",
    "pydeck>=0.9.1",
    "sqlalchemy>=2.0.43",
    "psycopg2-binary>=2.9.10",
]

[tool.ruff]
line-length = 120
